# faceit-cli

./: .bazelignore  .bazelrc  .dockerignore  .env.example  .gitignore  BAZEL_README.md  BUILD.bazel  BUILD.bazel.gazelle  DOCKER.md  Dockerfile  LOGGING.md  MODULE.bazel  Makefile  Makefile.bazel  README.md  TESTING.md  WORKSPACE  config.example.yml  docker-compose.yml  go.mod  go.sum  main.go  otel-collector-config.yaml
.github/workflows/: README.md  ci.yml  docker.yml  release-simple.yml  release.yml
docs/: INSTALL.md  LOGGING.md  QUICKSTART_TRACING.md  TRACING.md
examples/: logging_example.go
internal/app/: BUILD.bazel  app.go  app_test.go
internal/cache/: BUILD.bazel  cache.go  cache_test.go
internal/config/: BUILD.bazel  config.go  config_priority_test.go  config_test.go  yaml_config.go
internal/entity/: BUILD.bazel  entity_test.go  match.go  match_test.go  player.go
internal/logger/: BUILD.bazel  logger.go  logger_test.go
internal/repository/: BUILD.bazel  faceit.go  faceit_test.go
internal/telemetry/: telemetry.go  telemetry_test.go
internal/ui/: BUILD.bazel  clipboard.go  clipboard_test.go  helpers.go  helpers_test.go  models.go  progress_test.go  types.go  updates.go  views.go
