load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "faceit-cli",
    embed = [":faceit-cli_lib"],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    gazelle = "@bazel_gazelle//cmd/gazelle",
)

go_library(
    name = "faceit-cli_lib",
    srcs = ["main.go"],
    importpath = "faceit-cli",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app",
        "//internal/config",
        "//internal/logger",
        "@com_github_joho_godotenv//:godotenv",
    ],
)
