load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "faceit-cli/internal/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "logger_test",
    srcs = ["logger_test.go"],
    embed = [":logger"],
)
